--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -85,7 +85,7 @@ button{
 .container-input-prompt{
   background: white;
   padding: 10px;
-  width: 560px;
+  width: 40vw;
   border-radius: 10px;
   margin-top: 35px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
@@ -133,4 +133,32 @@ button{
     border: 1px solid #5d6244;
     background: #5d6244;
     color: white;
+}
+
+.container-App.auto-height {
+  height: auto;
+}
+
+.container-App.none-height {
+  height: none;
+}
+
+
+@media screen and (max-width: 1000px) {
+
+  .container-App{
+    flex-direction: column;
+    gap:20px;
+  }
+
+  .LeftContainer, .justLeftContainer,.RightContainer{
+    width: 100%;
+    background-color: transparent;
+    box-shadow: none;
+  }
+  .container-input-prompt {
+    min-width: 360px;
+}
+
+
 }
