--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -35,6 +35,7 @@
     display: flex;
     list-style: none;
     gap: 20px;
+    padding: 0px;
   }
   
   .navbar-menu li {
@@ -83,3 +84,11 @@
     border-radius: 50%;
   }
   
+  @media screen and (max-width: 1200px) {
+    .navbar{
+      justify-content: center;
+    }
+    .navbar-left, .navbar-right{
+      display: none;
+    }
+}
