--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -84,11 +84,22 @@
     border-radius: 50%;
   }
   
-  @media screen and (max-width: 1200px) {
-    .navbar{
-      justify-content: center;
-    }
-    .navbar-left, .navbar-right{
-      display: none;
-    }
+@media screen and (max-width: 1200px) {
+  .navbar{
+    justify-content: center;
+  }
+  .navbar-left, .navbar-right{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .navbar{
+    justify-content: center;
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    bottom: 0;
+  }
+
 }
