--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -98,8 +98,10 @@
     justify-content: center;
     position: fixed;
     z-index: 999;
-    width: 100%;
     bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50px;
   }
 
 }
