--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -103,6 +103,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 .containerbtnsMobile{
     display: flex;
