--- a/src/styles/marketing.css
+++ b/src/styles/marketing.css
@@ -25,10 +25,9 @@ button{
 .justLeftContainer{
   width: 50%;
   height: 100%;
+  height: 100%;
   background-color: white;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   width: 100%;
-  background: #e5e4e0;
 }
 .RightContainer{
   width: 50%;
