--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,7 +2,7 @@
 .navbar {
     display: flex;
     align-items: center;
-    background-color: #e0e6e6;
+    background-color: #3f4035;
     padding: 10px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 50px;
@@ -26,7 +26,7 @@
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: bold;
-    color: #333;
+    color: white;
   }
   
   .logo-img {
@@ -48,7 +48,7 @@
   
   .navbar-menu a {
     text-decoration: none;
-    color: #393c35;
+    color: white;
     font-size: 1rem;
     display: flex;
     align-items: center;
