--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,6 @@
-/* Estilos para el Navbar */
+body{
+  display: block;
+}
 .navbar {
     display: flex;
     align-items: center;
@@ -10,7 +12,7 @@
     left: 0;
     position: fixed;
     right: 0;
-    z-index: 999;
+    z-index: 10;
   }
   
   .navbar-left {
@@ -107,7 +109,7 @@
   .navbar{
     justify-content: center;
     position: fixed;
-    z-index: 999;
+    z-index: 10;
     bottom: 0;
     left: 0;
     right: 0;
