--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -42,6 +42,9 @@ body{
     list-style: none;
     gap: 20px;
     padding: 0px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
   
   .navbar-menu li {
@@ -94,6 +97,29 @@ body{
     width: 30px;
     height: 30px;
     border-radius: 50%;
+  }
+  .agentImageLogout{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .ContainerCardLogOut{
+    color: white;
+    text-align: end;
+  }
+
+  .ContainerCardLogOut h4{
+    margin: 0px;
+    font-weight: 300;
+
+  }
+  
+  .ContainerCardLogOut h5{
+    margin: 0px;
+    font-weight: 300;
+
   }
   
 @media screen and (max-width: 1200px) {
