--- a/src/styles/propiedadDetalle.css
+++ b/src/styles/propiedadDetalle.css
@@ -247,6 +247,7 @@
     }
     .ContainerFormContacto{
         padding-top: 20px;
+        padding-bottom: 40px;
     }
     .ContainerInfoPropiedad{
         gap:10px;
