--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,9 +2,14 @@
     padding-top: 70px;
     min-height: 100dvh;
 }
-
+input:focus-visible, textarea:focus-visible {
+    border-color: #5d6244 !important; 
+    box-shadow: 0 0 5px rgba(82, 85, 58, 0.5); 
+    outline: none; 
+  }
 @media screen and (max-width: 900px) {
     .containerAplicacion{
         padding-top: 0px;
+        width: 100dvw;
     }
 }
