--- a/src/styles/dropImagenes.css
+++ b/src/styles/dropImagenes.css
@@ -1,6 +1,5 @@
 .dropzone-container {
     background-color: transparent;
-    padding: 16px;
     border-radius: 8px;
     font-family: sans-serif;
   }
@@ -40,6 +39,8 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 16px;
+    justify-content: center;
+    align-items: center;
   }
   
   .image-wrapper {
@@ -65,8 +66,8 @@
     border: none;
     border-radius: 50%;
     font-size: 8px;
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 15px;
     cursor: pointer;
   }
   
