--- a/src/styles/marketplace.css
+++ b/src/styles/marketplace.css
@@ -43,6 +43,6 @@
     .ContainerCards{
         height: auto;
         overflow-y: hidden;
-        margin-top: 90px;
+        margin-top: 18vh;
     }
 }
