--- a/src/styles/servicios.css
+++ b/src/styles/servicios.css
@@ -1,11 +1,10 @@
 /* 🔹 Contenedor de Servicios */
 .servicios-container {
-    width: 100%; /* ✅ más ancho para permitir más tarjetas */
-    padding: 50px 20px; /* ✅ menos padding */
-    margin: 0 auto; /* ✅ centrado */
-    background-color: rgba(44, 58, 36, 0.92);
+    padding: 50px 20px; 
+    margin: 0 auto; 
+    background-color:#d3dcdc;
     font-family: 'Playfair Display', serif;
-    color: #F4E1C1;
+    color: #393f3a;
     text-align: center;
 }
 
@@ -13,8 +12,20 @@
 /* 🔹 Título */
 .servicios-title {
     font-size: 2.5rem;
-    margin-bottom: 5px;
-    color: #F4E1C1;
+    margin:0px;
+    color: #393f3a;
+    
+}
+.servicio-list{
+    border: 1px solid;
+    width: 13vw;
+    padding: 26px 12px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 17vh;
+    justify-content: center;
 }
 
 /* 🔹 Subtítulo */
@@ -31,7 +42,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
-    margin: 20px auto;
+    padding: 5vh 14vw;
     max-width: 100%; /* ✅ permite todo el ancho disponible */
 }
 
@@ -55,14 +66,7 @@
 
 /* 🔹 Contenido desplegable */
 .servicio-content {
-    max-height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: max-height 0.25s ease, opacity 0.25s ease;
-    font-size: 0.95rem;
-    line-height: 1.3;
-    padding-top: 8px;
-    color: #D5C5A0;
+    
 }
 
 /* 🔹 Mostrar contenido */
@@ -81,7 +85,7 @@
   }
   
   .servicio-logo svg {
-    color: #F4E1C1;
+    color: #393f3a;
     font-size: 30px;
   }
   
