--- a/src/styles/propiedadCard.css
+++ b/src/styles/propiedadCard.css
@@ -5,6 +5,7 @@
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
+    height: 50vh;
   }
   
   .property-image-container {
@@ -48,7 +49,7 @@
   .property-title {
     font-size: 16px;
     color: black;
-    margin: 10px 0px;
+    margin: 21px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,6 +74,9 @@
     font-size: 14px;
     color: #888;
     margin: 10px 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .property-title button{
     padding: 9px 26px;
