--- a/src/styles/bienvenida.css
+++ b/src/styles/bienvenida.css
@@ -59,12 +59,14 @@
   color: white;
   transition: all 0.3s ease-in-out;
   animation: fadeInScale 2.5s ease-out forwards;
+  border: none;
 }
 
 .bienvenida-buttons button:hover {
   animation: buttonHover 0.6s ease-in-out;
   background: white;
   color: #2C3A24;
+  border: 1px solid #2C3A24;
 }
 
 /* 🔹 Contenedor de la imagen */
