Update - Mejorar las distancias

--- a/src/styles/equipo.css
+++ b/src/styles/equipo.css
@@ -1,6 +1,9 @@
 .equipo-container {
   background-color: #d3dcdc;
-  padding: 50px;
+  padding-top: 5px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
   text-align: center;
   color: #393f3a;
 }
