--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,11 @@
 body{
   display: block;
 }
+.btn-desactivado {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: default;
+}
 .navbar {
     display: flex;
     align-items: center;
