--- a/src/styles/SCRM/analisis.css
+++ b/src/styles/SCRM/analisis.css
@@ -18,6 +18,7 @@
   }
   
   .analisis-chart {
+    width: 40%;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
@@ -30,5 +31,34 @@
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 15px;
+  }
+  
+  .analisis-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 40px;
+    flex-wrap: wrap;
+  }
+  
+  .analisis-chart {
+    width: 58%;
+    min-width: 300px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    /* Elimina esto si ya está aplicado en otro lado */
+  }
+  
+  .pors-container {
+    width: 38%;
+    min-width: 250px;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   }
   
